Tool for figuring out the targets from which symbols are being exported by a cc_shared_library

--- a/cc/tools/cc_shared_library/BUILD
+++ b/cc/tools/cc_shared_library/BUILD
@@ -1,10 +1,15 @@
 load(":cc_shared_library_allowlist.bzl", "cc_shared_library_allowlist_test")
+load(":exports_finder.bzl", "exports_finder")
 
 cc_shared_library(
     name = "foo_so",
     deps = [
         "@repo1//:foo",
-    ]
+    ],
+    additional_linker_inputs = ["@repo1//:foo.lds"],
+    user_link_flags = [
+        "-Wl,--version-script=$(location @repo1//:foo.lds)",
+    ],
 )
 
 cc_shared_library_allowlist_test(
@@ -20,4 +25,11 @@ cc_shared_library_allowlist_test(
         "@repo2//:grault",
         "@repo2//:garply",
     ],
+)
+
+exports_finder(
+    name = "foo_so_exports",
+    target = [
+        ":foo_so",
+    ]
 )
